methods.slug.SlugSnail.scala.error
Compilation error:
SlugSnail:3: error: ';' expected but ')' found.
avance();var x=getCouleurSol;recule())
                                     ^