methods.slug.SlugSnail.scala.code

avance();var x=getCouleurSol;recule())

def hunt(x) {while (!estSurBiscuit()) {if (isFacingTrail()) {baisseBrosse();avance();leveBrosse()};
    // Write your code here
                                      else {gauche()}}; prendBiscuit()}

def isFacingTrail(x):Boolean = {if (estFaceMur()) {return false}; else {avance();var y=getCouleurSol();recule();if(x==y) {return true}; else {return false}}
    // Write your code here
}